@@ -202,7 +202,7 @@ void do_bench(int nthreads, unsigned int size, int elsize, int rshift) {
   printf("memcpy(read):\t\t %6.1f us, %.1f MB/s\n",
          tmemcpy, size/(tmemcpy*MB/1e6));
 
-  for (clevel=1; clevel<10; clevel++) {
+  for (clevel=0; clevel<10; clevel++) {
 
     printf("Compression level: %d\n", clevel);
 
@@ -268,9 +268,9 @@ void do_bench(int nthreads, unsigned int size, int elsize, int rshift) {
   } /* End clevel loop */
 
 
-  /* To compute the totalsize, we should take into account the 9
+  /* To compute the totalsize, we should take into account the 10
      compression levels */
-  totalsize += (size * nchunks * niter * 9.);
+  totalsize += (size * nchunks * niter * 10.);
 
   free(src); free(srccpy); free(dest2);
   for (i = 0; i < nchunks; i++) {
